objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Ad_Listing_To_Page__c</fullName>
        <label>Ad Listing To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Beach Destinations-Index Page</fullName>
                </value>
                <value>
                    <fullName>Beach Destinations-Region_Index Page</fullName>
                </value>
                <value>
                    <fullName>City Page</fullName>
                </value>
                <value>
                    <fullName>Conference Center-Index Page</fullName>
                </value>
                <value>
                    <fullName>Conference Center-Region_Index Page</fullName>
                </value>
                <value>
                    <fullName>Convention Center-Index Page</fullName>
                </value>
                <value>
                    <fullName>Convention Center-Region_Index Page</fullName>
                </value>
                <value>
                    <fullName>Country</fullName>
                </value>
                <value>
                    <fullName>CVB-Index Page</fullName>
                </value>
                <value>
                    <fullName>CVB-Region_Index Page</fullName>
                </value>
                <value>
                    <fullName>Destination_Global/Home Page</fullName>
                </value>
                <value>
                    <fullName>Destination_Region Page</fullName>
                </value>
                <value>
                    <fullName>Destination_State Page</fullName>
                </value>
                <value>
                    <fullName>Directory page</fullName>
                </value>
                <value>
                    <fullName>Event Planning Blog</fullName>
                </value>
                <value>
                    <fullName>Global/Home Page</fullName>
                </value>
                <value>
                    <fullName>Golf Destinations-Index Page</fullName>
                </value>
                <value>
                    <fullName>Golf Destinations-Region_Index Page</fullName>
                </value>
                <value>
                    <fullName>Magnificient Mile Page</fullName>
                </value>
                <value>
                    <fullName>Meetings Page</fullName>
                </value>
                <value>
                    <fullName>Metro Area Page</fullName>
                </value>
                <value>
                    <fullName>Mountain Destinations-Index Page</fullName>
                </value>
                <value>
                    <fullName>Mountain Destinations-Region_Index Page</fullName>
                </value>
                <value>
                    <fullName>Overview Page</fullName>
                </value>
                <value>
                    <fullName>Primary CVB</fullName>
                </value>
                <value>
                    <fullName>Promotions Page</fullName>
                </value>
                <value>
                    <fullName>Region Page</fullName>
                </value>
                <value>
                    <fullName>Resort &amp; Luxury Destination-Index Page</fullName>
                </value>
                <value>
                    <fullName>Resort &amp; Luxury Destinations-Region_Index Page</fullName>
                </value>
                <value>
                    <fullName>Secondary CVB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Advertisement_Tab__c</fullName>
        <label>Advertisement Tab</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Native</fullName>
                </value>
                <value>
                    <fullName>All Venues</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Annual_Line_Value__c</fullName>
        <label>Annual Line Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Recurring_Revenue__c</fullName>
        <label>Annual Recurring Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Badge_Types__c</fullName>
        <label>Badge Types</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3” x 4” Single Side</fullName>
                </value>
                <value>
                    <fullName>3” x 4” Double Side</fullName>
                </value>
                <value>
                    <fullName>4” x 6” Single Side</fullName>
                </value>
                <value>
                    <fullName>4” x 6” Double Side</fullName>
                </value>
                <value>
                    <fullName>Custom Size</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Barcode__c</fullName>
        <label>Barcode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bundled__c</fullName>
        <formula>SBQQ__QuoteLine__r.SBQQ__Bundled__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bundled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City_Neighborhood__c</fullName>
        <label>City-Neighborhood</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Adelaide</fullName>
                </value>
                <value>
                    <fullName>Akron</fullName>
                </value>
                <value>
                    <fullName>Alabama Gulf Coast</fullName>
                </value>
                <value>
                    <fullName>Albuquerque</fullName>
                </value>
                <value>
                    <fullName>Alexandria</fullName>
                </value>
                <value>
                    <fullName>Amsterdam</fullName>
                </value>
                <value>
                    <fullName>Anaheim</fullName>
                </value>
                <value>
                    <fullName>Anchorage</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Ashville</fullName>
                </value>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Atlantic City</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Baltimore</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Barcelona</fullName>
                </value>
                <value>
                    <fullName>Baton Rouge</fullName>
                </value>
                <value>
                    <fullName>Beijing</fullName>
                </value>
                <value>
                    <fullName>Bergen County</fullName>
                </value>
                <value>
                    <fullName>Berlin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Birmingham</fullName>
                </value>
                <value>
                    <fullName>Bloomington</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Bridgewater</fullName>
                </value>
                <value>
                    <fullName>Brisbane</fullName>
                </value>
                <value>
                    <fullName>Brussels</fullName>
                </value>
                <value>
                    <fullName>Budapest</fullName>
                </value>
                <value>
                    <fullName>Buffalo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <formula>Opportunity.CloseDate</formula>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Complexity__c</fullName>
        <label>Complexity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Complexity</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Associated__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created as per requirement of Data Services. This will be auto populated based on Opportunity Contact associated.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <formula>Opportunity.ContractEndDate__c</formula>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <formula>Opportunity.ContractStartDate__c</formula>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contractor_s_Name__c</fullName>
        <label>Contractor’s Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alex Whitney</fullName>
                </value>
                <value>
                    <fullName>Andy Kim</fullName>
                </value>
                <value>
                    <fullName>Brian Black</fullName>
                </value>
                <value>
                    <fullName>Brian Gauthier</fullName>
                </value>
                <value>
                    <fullName>Chuck Currin</fullName>
                </value>
                <value>
                    <fullName>Dan Rich</fullName>
                </value>
                <value>
                    <fullName>Dan Russotto</fullName>
                </value>
                <value>
                    <fullName>David Kaiser</fullName>
                </value>
                <value>
                    <fullName>Gerald Herod</fullName>
                </value>
                <value>
                    <fullName>Jake Swanson</fullName>
                </value>
                <value>
                    <fullName>Jax Walsh</fullName>
                </value>
                <value>
                    <fullName>John Morgan</fullName>
                </value>
                <value>
                    <fullName>Justin Burris</fullName>
                </value>
                <value>
                    <fullName>Ken Adams</fullName>
                </value>
                <value>
                    <fullName>Lenny Ardiles</fullName>
                </value>
                <value>
                    <fullName>Matt Haff</fullName>
                </value>
                <value>
                    <fullName>Micah Wedemeyer</fullName>
                </value>
                <value>
                    <fullName>Phillip Sharpless</fullName>
                </value>
                <value>
                    <fullName>Tim Alexander</fullName>
                </value>
                <value>
                    <fullName>Tommy Hunke</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Caribbean</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Hungary</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>New Mexico</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Portugal</fullName>
                </value>
                <value>
                    <fullName>Scotland</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>South Korea</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>Sweden</fullName>
                </value>
                <value>
                    <fullName>Turkey</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>United States</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Details_of_Other__c</fullName>
        <label>Details of Other</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Access to Email Templates</fullName>
                </value>
                <value>
                    <fullName>Bulk Registration</fullName>
                </value>
                <value>
                    <fullName>Certificate of Completion</fullName>
                </value>
                <value>
                    <fullName>Contact Manipulation</fullName>
                </value>
                <value>
                    <fullName>Custom Style Sheet</fullName>
                </value>
                <value>
                    <fullName>Cvent Golden Package</fullName>
                </value>
                <value>
                    <fullName>Data Entry Fee</fullName>
                </value>
                <value>
                    <fullName>Data Storage infrastructure</fullName>
                </value>
                <value>
                    <fullName>Email Blast</fullName>
                </value>
                <value>
                    <fullName>Embeded Media</fullName>
                </value>
                <value>
                    <fullName>Event Template Overhaul</fullName>
                </value>
                <value>
                    <fullName>News Letter Template</fullName>
                </value>
                <value>
                    <fullName>Pending Registrations</fullName>
                </value>
                <value>
                    <fullName>Unlimited Responses</fullName>
                </value>
                <value>
                    <fullName>US Customer Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DiscountedSalesPrice__c</fullName>
        <formula>UnitPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discounted Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EBS_Inventory_Item_ID__c</fullName>
        <label>EBS Inventory Item ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EB_Type__c</fullName>
        <label>EB Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advanced</fullName>
                </value>
                <value>
                    <fullName>Advanced with Mobile</fullName>
                </value>
                <value>
                    <fullName>Complex</fullName>
                </value>
                <value>
                    <fullName>Complex with Mobile</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Medium with Mobile</fullName>
                </value>
                <value>
                    <fullName>Simple</fullName>
                </value>
                <value>
                    <fullName>Simple with Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>Feature End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Equipment_Fee__c</fullName>
        <label>Equipment Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Equipment_Status__c</fullName>
        <label>Equipment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rental</fullName>
                </value>
                <value>
                    <fullName>Purchased</fullName>
                </value>
                <value>
                    <fullName>Leased</fullName>
                </value>
                <value>
                    <fullName>Included</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <label>Equipment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BOCA Printer</fullName>
                </value>
                <value>
                    <fullName>Box Office Laptop</fullName>
                </value>
                <value>
                    <fullName>CC USB Swiper</fullName>
                </value>
                <value>
                    <fullName>Credit Card Swiper</fullName>
                </value>
                <value>
                    <fullName>Epson Printer</fullName>
                </value>
                <value>
                    <fullName>Handheld Mobile Scanners</fullName>
                </value>
                <value>
                    <fullName>Hard Tickets</fullName>
                </value>
                <value>
                    <fullName>iPod Scanner</fullName>
                </value>
                <value>
                    <fullName>IPOd Touch</fullName>
                </value>
                <value>
                    <fullName>Linea Pro vs 4</fullName>
                </value>
                <value>
                    <fullName>TicketMob Hard Stock</fullName>
                </value>
                <value>
                    <fullName>Ticket Scanner</fullName>
                </value>
                <value>
                    <fullName>Touch Screen HP</fullName>
                </value>
                <value>
                    <fullName>Wireless Handheld scanners</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Name_Location__c</fullName>
        <label>Event Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Start_Date__c</fullName>
        <label>Event Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate_Correct__c</fullName>
        <formula>Opportunity.Exchange_Rate__c</formula>
        <label>Exchange Rate (Correct)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate__c</fullName>
        <label>Exchange Rate</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Totals__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Updated via workflow to update line items that are tagged as transactional &amp; should be excluded form all summary totals.</description>
        <label>Exclude from Totals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extended_Term_Amount__c</fullName>
        <label>Extended Term Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Feature_Set_Id__c</fullName>
        <label>Feature Set Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature_Set_Name__c</fullName>
        <description>This field has been created for FP &amp; A team for the reporting. It is an auto-number generated for each opportunity product that has been created</description>
        <displayFormat>{00000} - {DD}{MM}{YY}</displayFormat>
        <label>Feature Set Name</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Feature_Type__c</fullName>
        <formula>IF(PricebookEntry.Product2.Name="Accounts Added","1", 
IF(PricebookEntry.Product2.Name="Contact Custom Fields Added","1", 
IF(PricebookEntry.Product2.Name="Contacts Added","1", 
IF(PricebookEntry.Product2.Name="Dashboards","1", 
IF(PricebookEntry.Product2.Name="Email Limit Raised","1", 
IF(PricebookEntry.Product2.Name="Event Builder(s)","1", 
IF(PricebookEntry.Product2.Name="Event Builder(s) - Advanced","1", 
IF(PricebookEntry.Product2.Name="Event Builder(s) - Advanced with Mobile","1", 
IF(PricebookEntry.Product2.Name="Event Builder(s) - Complex","1", 
IF(PricebookEntry.Product2.Name="Event Builder(s) - Complex with Mobile","1", 
IF(PricebookEntry.Product2.Name="Event Builder(s) - Medium","1", 
IF(PricebookEntry.Product2.Name="Event Builder(s) - Medium with Mobile","1", 
IF(PricebookEntry.Product2.Name="Event Builder(s) - Simple","1", 
IF(PricebookEntry.Product2.Name="Event Builder(s) - Simple with Mobile","1", 
IF(PricebookEntry.Product2.Name="Reply Emails Added","1", 
IF(PricebookEntry.Product2.Name="Survey Questions Added","1", 
IF(PricebookEntry.Product2.Name="Surveys Added","1", 
IF(PricebookEntry.Product2.Name="User Logins Added","1", 
IF(PricebookEntry.Product2.Name="Onsite/Online Training","1", 
IF(PricebookEntry.Product2.Name="Custom work","1", 
IF(PricebookEntry.Product2.Name="Cvent Payment Services","1", 
"0")))))))))))))))))))))</formula>
        <label>Feature Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HC_Product_Group__c</fullName>
        <formula>IF(TEXT(PricebookEntry.Product2.Product_Group__c)="Hospitality Cloud",TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HC Product Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Closed__c</fullName>
        <description>Is Closed</description>
        <formula>Opportunity.IsClosed</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is this Opportunity Closed?</inlineHelpText>
        <label>Is Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License_Fee__c</fullName>
        <label>License Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Line_Type__c</fullName>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Extension</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Decommission</fullName>
                </value>
                <value>
                    <fullName>Migration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MYD__c</fullName>
        <label>MYD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Milestone_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Milestone Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NBB_Cross_Sell__c</fullName>
        <label>NBB - Cross Sell</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NBB_New_Account_New_Logo__c</fullName>
        <label>NBB New Account / New Logo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NBB_Upsell__c</fullName>
        <label>NBB – Upsell</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NBB_Value__c</fullName>
        <label>NBB Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Total_Price__c</fullName>
        <formula>SBQQ__QuoteLine__r.SBQQ__NetTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Unit_Price__c</fullName>
        <formula>SBQQ__QuoteLine__r.SBQQ__NetPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Recurring_Bookings_Amount__c</fullName>
        <label>Non-Recurring Bookings Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Recurring_Revenue__c</fullName>
        <label>NRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Not_to_be_Rolled_up__c</fullName>
        <formula>IF(
ISPICKVAL(Product__c,"PSG"),"TRUE",
CASE(PricebookEntry.Product2.Name,
"Event Builder(s)","TRUE",
"Survey Builder(s)", "TRUE",
"FALSE")
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Not to be Rolled-up</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OnArrival_360_Event_Name__c</fullName>
        <formula>SBQQ__QuoteLine__r.OnArrival_360_Event_Selection__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OnArrival 360 Event Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product_Dev__c</fullName>
        <description>Used to build the Standard Roll up's for Opportunity</description>
        <label>Opportunity Product Dev</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Product ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_Product_Legacy_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Oppty Product Legacy Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Original_Feature_Start_Date__c</fullName>
        <label>Original Feature Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Country_Name__c</fullName>
        <label>Other Country Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Region__c</fullName>
        <label>Other Region</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Of_Promotion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Part Of Promotion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <description>This field lists down the partner related to EEM or Onsite Solutions contracts</description>
        <inlineHelpText>This field lists down the partner related to EEM or Onsite Solutions contracts</inlineHelpText>
        <label>Partner Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WEG</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Per_Diem__c</fullName>
        <label>Per Diem</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Per_Item_Fee__c</fullName>
        <label>Per Item/Hr Fee</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Per_Item_Hr_Fee_Rack__c</fullName>
        <label>Per Item/Hr Fee (Rack)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Please_specify_Other_City__c</fullName>
        <label>Other City Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pocket_Price__c</fullName>
        <formula>SBQQ__QuoteLine__r.SBQQ__CustomerPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pocket Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_feature_set_number__c</fullName>
        <label>Previous feature set number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>TEXT(PricebookEntry.Product2.Product_Family__c)</formula>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line2__c</fullName>
        <label>Product Line2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <formula>TEXT(PricebookEntry.Product2.Product_Line__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>PricebookEntry.Product2.Name</formula>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
</CustomObject>